objects/vlocity_cmt__CachedProduct2Translation__c.object
<CustomObject>
    <description>This object is to store translation of various field of Product2.</description>
    <fields>
        <fullName>vlocity_cmt__LocaleCode__c</fullName>
        <description>This field store locale code for the translation.</description>
        <label>Locale Code</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>vlocity_cmt__VlocityLocaleCode</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Product2Description__c</fullName>
        <description>This field store translated value of Description field of Product2 object.</description>
        <label>Translated Product Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Product2Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field store product id.</description>
        <label>Translated Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Cached Product Translations</relationshipLabel>
        <relationshipName>Cached_Product2_Translations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Product2Name__c</fullName>
        <description>This field store translated value of Name field of Product2 object.</description>
        <label>Translated Product Name</label>
        <type>TextArea</type>
    </fields>
    <label>Cached Product Translation</label>
    <nameField>
        <label>Cached Product Translation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cached Product Translations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>